# futurecast

./: .gitignore  FEATURE_IDEAS.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: RESULTS_CHATBOT_IMPLEMENTATION_PLAN.md  RESULTS_CHATBOT_PLAN.md
examples/: example_predictions.py
src/: main.py
src/futurecast/: app.py  cli.py  config.py  prediction_engine.py  utils.py
src/futurecast/chatbot/: __init__.py  action_dispatcher.py  llm_interaction.py  nlu_processor.py  prediction_engine_interface.py  state_manager.py
src/projector/: __init__.py  app.py  models.py
tests/: __init__.py  test_models.py  test_utils.py
